--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Scheduling Assistant</title>
-    <link rel="stylesheet" href="INDEX.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -135,6 +135,7 @@
         </div>
     </div>
 
-    <script src="APP.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
