--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Personal Scheduling Assistant</h1>
+            <h1>Personal Task Scheduling Assistant</h1>
             <p class="subtitle">Manage your tasks efficiently</p>
         </header>
 
